# ziroba

./: .atom-build.json  .gitignore  CMakeLists.txt  README.md
android/ziroba_app/app/: build.gradle  proguard-rules.pro
android/ziroba_app/app/src/main/: AndroidManifest.xml
android/ziroba_app/app/src/main/java/net/bomtec/ziroba/: CmdClient.java  MainActivity.java  NetClient.java  SettingsActivity.java  SocketClient.java  VerticalSeekBar.java  ZirobaRobot.java
android/ziroba_app/app/src/main/java/net/bomtec/zirobaapp/: MainActivity.java  VerticalSeekBar.java
android/ziroba_app/app/src/main/res/layout/: activity_main.xml
android/ziroba_app/app/src/main/res/layout-land/: activity_main.xml
android/ziroba_app/app/src/main/res/values/: strings.xml  strings_activity_settings.xml  styles.xml
android/ziroba_app/app/src/main/res/xml/: pref_buttons.xml  pref_commands.xml  pref_general.xml  pref_headers.xml  pref_netcommands.xml
board/proteus/: Ziroba.pdsprj  Ziroba.pdsprj.VBOX-PC.VMUser.workspace  Ziroba.sts
board/proteus/geber/: Ziroba - CADCAM Drill.TXT  Ziroba - CADCAM Mechanical 1.TXT
docs/: android-connectivity.txt  bluetooth-serial.md  client-pairing.txt  debian_packages.txt  pinmap.txt
include/: ZRobot.h  pinmapper.hpp  zcommon.hpp  zdefs.h  zdefs.hpp  zirobarobot.hpp  zmotion.h  zmotion.hpp  znet.h  znet.hpp  zsensing.h  zvision.hpp
include/dev/: Motor.h
lib/: .gitignore
lib/mraa/lib/pkgconfig/: mraa.pc
lib/mraa/lib64/: libmraa.so.0.8.0
libs/: .gitignore
pcb/kicad/: .gitignore  ziroba-pcb.pro  ziroba-pcb.sch
pcb/proteus/: .gitignore  Ziroba.DO  Ziroba.EDF  bestsave.rte
pcb/proteus/geber/: Ziroba - CADCAM Bottom Copper.TXT  Ziroba - CADCAM READ-ME.TXT  Ziroba - CADCAM Top Solder Resist.TXT
pinmaps/: beaglebone-black.pinmap
scripts/: .gitignore  README.md  beaglebone_ziroba.run  build_blacklib  gpio_ctl  robot_ctl  status_led  sysenv  ziroba_beaglebone
scripts/systemd-services/: bluetooth-agent.service  bluetooth-terminal.service  status-led.service  ziroba.service
src/: CMakeLists.txt  ZBtJoystickClient.cpp  ZBtJoystickServer.cpp  ZKeypad.cpp  ZRobot.cpp  pinmapper.cpp  zcommon.cpp  ziroba.cpp  zirobarobot.cpp  zmain.cpp  zmotion.cpp  znet.cpp  zsensing.cpp  zvision.cpp
src/bbb/: ZirobaRobot.cpp  joystick_client.cpp  ziroba_keypad.cpp  ziroba_server.cpp
tests/: servo.cpp
